<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wrapperLinearLayout"
    android:orientation="vertical">


    <Button
        android:id="@+id/userButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/new_user"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

</LinearLayout>