...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/open_inbox_item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corners"
                android:onClick="onClickOpenInbox"
                android:text="@string/inbox"
                android:textColor="@android:color/white" />
...
